--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
+    "json-stringify-safe": "^5.0.1",
     "jwt-decode": "^3.1.2",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -34,6 +35,7 @@
     "@storybook/testing-library": "^0.0.9",
     "@types/aos": "^3.0.4",
     "@types/js-cookie": "^3.0.2",
+    "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
