--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-underscore-dangle": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/jsx-indent-props": "off",
+    "react/no-unknown-property": "off",
     "object-curly-newline": [
       "error",
       {
