--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "17.0.2",
     "react-number-format": "^4.9.3",
     "react-router-dom": "^6.2.2",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
