--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "add": "^2.0.6",
     "aos": "^2.3.4",
-    "axios": "0.25.0",
+    "axios": "^0.25.0",
     "classnames": "^2.3.1",
     "js-cookie": "^3.0.1",
     "json-stringify-safe": "^5.0.1",
