update env bismillah

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API = https://admin-storeazrayaal.herokuapp.com/
+NEXT_PUBLIC_API = https://admin-storeazrayaal.herokuapp.com
 NEXT_PUBLIC_IMG = https://admin-storeazrayaal.herokuapp.com/uploads
 # NEXT_PUBLIC_API = http://localhost:4000
 # NEXT_PUBLIC_IMG = http://localhost:4000/api/v1/uploads
